# case-boss

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
case_boss/: __init__.py  case_boss.py  cli.py  const.py  errors.py  types.py  utils.py
case_boss/abstract/: case_converter.py
case_boss/converters/: camel_converter.py  kebab_converter.py  pascal_converter.py  snake_converter.py  space_converter.py  start_converter.py
cli/: cli.py  const.py  test_cli.py
core/: __init__.py  case_boss.py  const.py  types.py  utils.py
core/abstract/: __init__.py  case_converter.py
core/converters/: __init__.py  camel_converter.py  case_converter.py  kebab_converter.py  pascal_converter.py  snake_converter.py  space_converter.py  start_converter.py
core/decorators/: __init__.py  validate_is_dict.py
tests/: test_case_boss.py  test_cli.py  test_utils.py
tests/converters/: test_camel_converter.py  test_case_converter.py  test_kebab_converter.py  test_pascal_converter.py  test_snake_converter.py  test_space_converter.py  test_start_converter.py
tests/fixtures/: sample.json
