
[project.scripts]
case-boss = "cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-boss"
version = "0.1.0"
description = "Library converting Python dict or JSON keys to selected format"
readme = "README.md"
authors = [{name = "codezaur", email = "codezaur@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["typer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]