[metadata]
name = case-boss
version = 0.1.0
description = Library converting JSON or Python dict keys to selected format
long_description = file: README.md
long_description_content_type = text/markdown
author = codezaur
author_email = codezaur@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
# install_requires =   requests>=2.25.1